--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -3,6 +3,7 @@
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="horizontal"
     android:padding="14dp">
 
@@ -40,6 +41,7 @@
         android:layout_gravity="center_vertical|end"
         android:layout_weight="1"
         android:background="@color/white"
+        android:tint="@color/quantum_grey700"
         android:src="@drawable/ic_delete_forever_black_24dp" />
 
 </LinearLayout>
